@@ -1123,6 +1123,7 @@ public:
 	void  SendWebLink(const char* website);
 
 	bool	StoreTurnInItems(Mob* with);
+	void DuplicateLoreMessage(uint32 ItemID);
 
 protected:
 	friend class Mob;
