@@ -1,8 +1,9 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
 == 01/12/2013 ==
-Derision: RoF: Personal Tribute now works and the Pet Buff Window now work.
+Derision: RoF: Personal Tribute and the Pet Buff Window now work.
 Derision: Fixed potential crash in SendPetBuffsToClient. 
+Derision: RoF: Accounted for the fact the Duplicate Lore item message now includes the item's name.
 
 == 01/11/2013 ==
 JJ: Added rule check to zone - no need to load Merc Templates if Mercs aren't allowed.
